# Realized_Volatility_Timing_Public

./: .gitignore  README.md  pyproject.toml
investment_lab/: __init__.py  backtest.py  option_selection.py  option_trade.py  rates.py  util.py
investment_lab/data/: __init__.py  data_loader.py  option_db.py  rates_db.py
investment_lab/metrics/: __init__.py  performance.py  util.py  volatility.py
investment_lab/pricing/: __init__.py  black_scholes.py  implied_volatility.py
investment_lab/stochastic/: __init__.py
investment_lab/surface/: __init__.py  sabr.py  ssvi.py  svi.py
notebooks/: Project_Report.ipynb
outputs/dynamic_carry/aapl_dynamic_carry_full_sample_2016-01-04_2023-03-31/: run_metadata.json  run_summary.txt
outputs/dynamic_carry/aapl_dynamic_carry_full_sample_2016-01-04_2023-03-31/tables/: backtest_comparison.csv  nav_comparison.csv  parameter_frame.csv  proxy_metrics.csv  signal_frame_ukf.csv  (+1 more)
outputs/dynamic_carry/spy_dynamic_carry_full_sample_2020-01-02_2022-12-30/: run_metadata.json  run_summary.txt
outputs/spy_dynamic_carry/: run_metadata.json  run_summary.txt
outputs/spy_dynamic_carry/tables/: backtest_comparison.csv  nav_comparison.csv  parameter_frame.csv  signal_frame.csv
realized_vol_timing/: __init__.py  benchmarks.py  config.py  data.py  experiments.py  heston_ukf.py  reporting.py  signals.py  strategy.py  synthetic.py
scripts/: run_dynamic_carry.py  run_spy_dynamic_carry.py  run_synthetic_demo.py
tests/: test_benchmarks.py  test_data_repository.py  test_heston_ukf.py  test_option_trade.py  test_reporting.py  test_services.py
(+6 files in other folders)
